View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025747 | Open CASCADE | OCCT:Data Exchange | public | 2015-01-23 18:37 | 2015-05-14 15:32 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025747: Bad IGES file after import and export with different units | ||||
Description | Bad IGES file is produced in case when it was read and then written with a different unit value. | ||||
Steps To Reproduce | Check attached script | ||||
Tags | No tags attached. | ||||
Test case number | bugs iges(003) bug25747 | ||||
2015-01-23 18:37 developer |
test.tcl (294 bytes) |
2015-01-23 18:37 developer |
good.png (27,851 bytes) |
2015-01-23 18:37 developer |
bad.png (29,589 bytes) |
|
Branch CR25747 has been created by dbv. SHA-1: 97fbe2dfea89e25bcceba2ec8a7cb772f1163625 Detailed log of new commits: Author: dbv Date: Mon Feb 16 18:16:42 2015 +0300 - Fixed ellipse curve radius scale - Fixed hyperbola curve radius scale - Fixed plane surface scale - Fixed cylindrical, conical, spherical, toroidal radius and axis scale |
|
Patch is ready to be reviewed in branch CR25747 Dear gka, please review. |
|
Branch CR25747 is ready to be tested |
2015-02-19 11:52 developer |
pencil.igs (208,980 bytes) |
|
Dear BugMaster, Branch CR25747 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 97fbe2dfea89e25bcceba2ec8a7cb772f1163625 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests/CR25747-master-occt/Debian60-64/bugs/iges/bug25747.html http://occt-tests/CR25747-master-occt/Windows-32-VC10/bugs/iges/bug25747.html bugs iges(003) bug25747: FAILED Testing on Linux: occt component : Total MEMORY difference: 84902955 / 86135871 Total CPU difference: 49091.38000000032 / 48446.16999999995 products component : Total MEMORY difference: 23455327 / 23482650 Total CPU difference: 15783.379999999986 / 15863.79999999999 Testing on Windows: occt component : Total MEMORY difference: 40697944 / 40708229 Total CPU difference: 34602.578125 / 34798.1875 products component : Total MEMORY difference: 11056707 / 11104501 Total CPU difference: 10561.5 / 12082.625 There are no differences in images found by testdiff. |
|
Branch CR25747 has been updated by mkv. SHA-1: 4dc8b4279e9145ec33ce24b5f3edf700a36ffc00 Detailed log of new commits: Author: mkv Date: Thu Feb 19 17:49:30 2015 +0300 Test case for issue CR25747 |
|
Dear dbv, could you please review test case bugs iges(003) bug25747 |
|
Branch CR25747 has been updated by dbv. SHA-1: d0443299dd446ba010a09d9df7fcdf0cc5960586 Detailed log of new commits: Author: dbv Date: Thu Feb 19 18:02:43 2015 +0300 Test case update |
|
Dear mkv, test case has been updated. Please test the patch. |
|
Test case bugs/iges(003)/bug25747: OK. Branch CR25747 is TESTED. |
|
Branch CR25747 has been deleted by inv. SHA-1: d0443299dd446ba010a09d9df7fcdf0cc5960586 |
occt: master a1096551 2015-02-26 09:47:41
Committer: bugmaster Details Diff |
0025747: Bad IGES file after import and export with different units - Fixed ellipse curve radius scale - Fixed hyperbola curve radius scale - Fixed plane surface scale - Fixed cylindrical, conical, spherical, toroidal radius and axis scale Test case for issue CR25747 |
Affected Issues 0025747 |
|
mod - src/GeomToIGES/GeomToIGES_GeomCurve.cxx | Diff File | ||
mod - src/GeomToIGES/GeomToIGES_GeomSurface.cxx | Diff File | ||
mod - src/IGESGeom/IGESGeom_ConicArc.cxx | Diff File | ||
add - tests/bugs/iges/bug25747 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-01-23 18:37 |
|
New Issue | |
2015-01-23 18:37 |
|
Assigned To | => dbv |
2015-01-23 18:37 |
|
File Added: test.tcl | |
2015-01-23 18:37 |
|
File Added: good.png | |
2015-01-23 18:37 |
|
File Added: bad.png | |
2015-01-23 18:38 |
|
Status | new => assigned |
2015-02-16 18:17 | git | Note Added: 0037583 | |
2015-02-16 18:18 |
|
Note Added: 0037584 | |
2015-02-16 18:18 |
|
Assigned To | dbv => gka |
2015-02-16 18:18 |
|
Status | assigned => resolved |
2015-02-16 18:45 |
|
Note Added: 0037585 | |
2015-02-16 18:45 |
|
Assigned To | gka => bugmaster |
2015-02-16 18:45 |
|
Status | resolved => reviewed |
2015-02-16 20:44 |
|
Assigned To | bugmaster => mkv |
2015-02-19 11:52 |
|
File Added: pencil.igs | |
2015-02-19 17:50 |
|
Note Added: 0037713 | |
2015-02-19 17:50 | git | Note Added: 0037714 | |
2015-02-19 17:51 |
|
Note Added: 0037715 | |
2015-02-19 17:51 |
|
Assigned To | mkv => dbv |
2015-02-19 17:51 |
|
Status | reviewed => assigned |
2015-02-19 17:51 |
|
Test case number | => bugs iges(003) bug25747 |
2015-02-19 18:03 | git | Note Added: 0037717 | |
2015-02-19 18:03 |
|
Status | assigned => resolved |
2015-02-19 18:05 |
|
Note Added: 0037718 | |
2015-02-19 18:05 |
|
Assigned To | dbv => mkv |
2015-02-19 18:05 |
|
Status | resolved => reviewed |
2015-02-20 19:26 |
|
Note Added: 0037770 | |
2015-02-20 19:26 |
|
Assigned To | mkv => bugmaster |
2015-02-20 19:26 |
|
Status | reviewed => tested |
2015-02-27 16:53 | bugmaster | Changeset attached | => occt master a1096551 |
2015-02-27 16:53 | bugmaster | Status | tested => verified |
2015-02-27 16:53 | bugmaster | Resolution | open => fixed |
2015-03-18 13:37 | git | Note Added: 0038575 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:32 |
|
Fixed in Version | => 6.9.0 |